# mcp-server-pixeltable-developer

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  VISUALIZATION_PLAN.md  canvas.html  dev.py  install.py  list_tools.py  pyproject.toml  test_setup.py
src/mcp_server_pixeltable/: __main__.py  server.py
src/mcp_server_pixeltable/core/: __init__.py  pixeltable_functions.py
src/mcp_server_pixeltable_stio/: __init__.py  __main__.py  prompt.py  server.py  utils.py
src/mcp_server_pixeltable_stio/core/: __init__.py  bug_logger.py  canvas_server.py  config.py  dependencies.py  directories.py  helpers.py  pixeltable_functions.py  repl_functions.py  repl_session.py  resources.py  tables.py  udf.py  ui_server.py
src/mcp_server_pixeltable_stio/server/api/: main.py
src/mcp_server_pixeltable_stio/server/ui/: .gitignore
src/mcp_server_pixeltable_stio/server/ui/src/: App.tsx  PipelineView.tsx  useWebSocket.ts
src/mcp_server_pixeltable_stio/visualization/: __init__.py  executor.py  worker.py
src/mcp_server_pixeltable_stio/visualization/api/: __init__.py  main.py
src/mcp_server_pixeltable_stio/visualization/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/mcp_server_pixeltable_stio/visualization/ui/src/: PipelineView.tsx
