[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-pixeltable-stio"
version = "0.1.0"
description = "MCP server for Pixeltable (STIO version)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "pixeltable", "ai", "data", "multimodal", "machine-learning"]
authors = [
    {name = "Identimoji", email = "help@identimoji.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pixeltable>=0.1.0",
    "mcp[cli]>=1.0.0",
    "ollama>=0.5.1",
    "fireworks-ai>=0.19.0",
    "sentence-transformers>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/identimoji/mcp-server-pixeltable-stio"
"Bug Tracker" = "https://github.com/identimoji/mcp-server-pixeltable-stio/issues"

[project.scripts]
mcp-server-pixeltable-stio = "mcp_server_pixeltable_stio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_pixeltable_stio"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
