[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-pixeltable-developer"
version = "0.1.0"
description = "MCP server for Pixeltable (Developer version)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "pixeltable", "ai", "data", "multimodal", "machine-learning"]
authors = [
    {name = "Identimoji", email = "help@identimoji.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pixeltable>=0.4.7",
    "mcp[cli]>=1.0.0",
    "ollama>=0.5.1",
    "fireworks-ai>=0.19.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pixeltable-yolox>=0.4.2",
    "transformers>=4.53.2",
]

[project.urls]
"Homepage" = "https://github.com/goodlux/mcp-server-pixeltable-developer"
"Bug Tracker" = "https://github.com/goodlux/mcp-server-pixeltable-developer/issues"

[project.scripts]
mcp-server-pixeltable-developer = "mcp_server_pixeltable_stio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_pixeltable_stio"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
